[package]
name = "intrasweep"
version = "0.3.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# 命令行解析
clap = { version = "4.0", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# 输出美化
comfy-table = "7.0"
indicatif = "0.17"
termcolor = "1.2"

# 系统信息收集
sysinfo = "0.30"
whoami = "1.5"
local-ip-address = "0.6"

# 文件系统
walkdir = "2.5"
glob = "0.3"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 网络和扫描
ipnet = "2.9"
futures = "0.3"

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }

# Web 指纹识别
reqwest = { version = "0.12", features = ["native-tls"], default-features = false }
mur3 = "0.1"

# 格式化输出
csv = "1.3"

# PoC 漏洞扫描
regex = "1"
serde_yaml = "0.9"

# 爆破模块相关
ssh2 = "0.9"
redis = "0.25"
mongodb = "3.0"
tokio-postgres = "0.7"
tiberius = "0.12"
mysql_async = "0.34"
async-trait = "0.1"

# NTLM 认证 / 加密原语
md-5 = "0.10"
hmac = "0.12"
digest = "0.10"
base64 = "0.22"
native-tls = "0.2"
sha2 = "0.10"

# 平台特定依赖
[target.'cfg(windows)'.dependencies]
# Windows 注册表操作
winreg = "0.52"
# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[target.'cfg(unix)'.dependencies]
# Unix 系统接口
nix = { version = "0.28", default-features = false, features = ["user", "process", "net", "fs"] }
users = "0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
